testcases/pos/type/valdecl_annotated_any_type.bard
let val x: Int = if true then 10 else "hello"
in
    x + 7
end
